--- a/letras/e-ele.html
+++ b/letras/e-ele.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Célula Upper | New Wine | Música: Inefável Deus - Voe Music</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="text-center">É Ele</h1>
         <h4 class="text-center text-muted">Autor: Drops INA</h4>
         <div class="mt-4 p-4 border rounded bg-light">
-            <pre class="fs-5">
+            <pre class="fs-5 letra">
 Estou preparando um caminho
 Endireitando as veredas
 E cada vez mais diminuindo
