--- a/letras/inefavel-deus.html
+++ b/letras/inefavel-deus.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Célula Upper | New Wine | Música: Inefável Deus - Voe Music</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="container mt-5">
         <h1 class="text-center">Inefável Deus</h1>
         <h4 class="text-center text-muted">Autor: Voe Music</h4>
         <div class="mt-4 p-4 border rounded bg-light">
-            <pre class="fs-5">
+            <pre class="fs-5 letra">
 Santo, poderoso, inefavel Deus 
 Tão Majestoso, tao glorioso
 Ele e o rei dos reis
