--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li class="list-group-item"><a href="letras/inefavel-deus.html" class="text-decoration-none">Inefável Deus - Voe Music</a></li>
             <li class="list-group-item"><a href="letras/e-ele.html" class="text-decoration-none">É Ele - Drops INA</a></li>
             <li class="list-group-item"><a href="letras/em-espirito-em-verdade.html" class="text-decoration-none">Em Espirito e Em Verdade - Gabriela Rocha</a></li>
+            <li class="list-group-item"><a href="letras/new-wine.html" class="text-decoration-none">Vinho Novo - Hillsong</a></li>
         </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
