feat: new music

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2 class="mb-3">Célula Upper | New Wine</h2>
         <h1 class="mb-3">Letras de Louvores</h1>
         <ul class="list-group">
+            <li class="list-group-item"><a href="letras/outro-igual-nao-ha.html" class="text-decoration-none">Outro Igual não há - Gabriel Guedes</a></li>
             <li class="list-group-item"><a href="letras/inefavel-deus.html" class="text-decoration-none">Inefável Deus - Voe Music</a></li>
             <li class="list-group-item"><a href="letras/e-ele.html" class="text-decoration-none">É Ele - Drops INA</a></li>
             <li class="list-group-item"><a href="letras/em-espirito-em-verdade.html" class="text-decoration-none">Em Espirito e Em Verdade - Gabriela Rocha</a></li>
