--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1 class="mb-3">Letras de Louvores</h1>
         <ul class="list-group">
             <li class="list-group-item"><a href="letras/outro-igual-nao-ha.html" class="text-decoration-none">Outro Igual não há - Gabriel Guedes</a></li>
+            <li class="list-group-item"><a href="letras/a-ele-a-gloria.html" class="text-decoration-none">A Ele a Glória - Gabriela Rocha</a></li>
             <li class="list-group-item"><a href="letras/inefavel-deus.html" class="text-decoration-none">Inefável Deus - Voe Music</a></li>
             <li class="list-group-item"><a href="letras/e-ele.html" class="text-decoration-none">É Ele - Drops INA</a></li>
             <li class="list-group-item"><a href="letras/em-espirito-em-verdade.html" class="text-decoration-none">Em Espirito e Em Verdade - Gabriela Rocha</a></li>
