--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h2 class="mb-3">Célula Upper | New Wine</h2>
         <h1 class="mb-3">Letras de Louvores</h1>
         <ul class="list-group">
+            <li class="list-group-item"><a href="letras/preciso-de-ti.html" class="text-decoration-none">Preciso de Ti - Diante do Trono</a></li>
+            <li class="list-group-item"><a href="letras/tu-es-o-rei.html" class="text-decoration-none">Tu és o Rei - W Junior</a></li>
             <li class="list-group-item"><a href="letras/outro-igual-nao-ha.html" class="text-decoration-none">Outro Igual não há - Gabriel Guedes</a></li>
             <li class="list-group-item"><a href="letras/a-ele-a-gloria.html" class="text-decoration-none">A Ele a Glória - Gabriela Rocha</a></li>
             <li class="list-group-item"><a href="letras/inefavel-deus.html" class="text-decoration-none">Inefável Deus - Voe Music</a></li>
