feat: new music

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <h2 class="mb-3">Célula Upper | New Wine</h2>
         <h1 class="mb-3">Letras de Louvores</h1>
         <ul class="list-group">
+            <li class="list-group-item"><a href="letras/vim-para-adorar-te.html" class="text-decoration-none">Vim para Adorar-te - Adoração e Adoradores</a></li>
+            <li class="list-group-item"><a href="letras/grande-e-o-senhor.html" class="text-decoration-none">Grande - Adhemar de Campos</a></li>
+            <li class="list-group-item"><a href="letras/pra-onde-eu-irei.html" class="text-decoration-none">Pra onde eu irei - Morada</a></li>
             <li class="list-group-item"><a href="letras/preciso-de-ti.html" class="text-decoration-none">Preciso de Ti - Diante do Trono</a></li>
             <li class="list-group-item"><a href="letras/tu-es-o-rei.html" class="text-decoration-none">Tu és o Rei - W Junior</a></li>
             <li class="list-group-item"><a href="letras/outro-igual-nao-ha.html" class="text-decoration-none">Outro Igual não há - Gabriel Guedes</a></li>
