feat: title lift

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="mb-3">Célula Upper | New Wine</h2>
+        <h2 class="mb-3">Célula Upper | New Wine 🍷❤️‍🔥</h2>
         <h1 class="mb-3">Letras de Louvores</h1>
         <ul class="list-group">
             <li class="list-group-item"><a href="letras/vim-para-adorar-te.html" class="text-decoration-none">Vim para Adorar-te - Adoração e Adoradores</a></li>
