feat: new music

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h2 class="mb-3">Célula Upper | New Wine 🍷❤️‍🔥</h2>
         <h1 class="mb-3">Letras de Louvores</h1>
         <ul class="list-group">
+            <li class="list-group-item"><a href="letras/cancao-ao-cordeiro.html" class="text-decoration-none">Canção ao Cordeiro - Israel Salazar</a></li>
+            <li class="list-group-item"><a href="letras/pode-morar-aqui.html" class="text-decoration-none">Pode morar aqui - Theo Rubia</a></li>
             <li class="list-group-item"><a href="letras/vim-para-adorar-te.html" class="text-decoration-none">Vim para Adorar-te - Adoração e Adoradores</a></li>
             <li class="list-group-item"><a href="letras/grande-e-o-senhor.html" class="text-decoration-none">Grande - Adhemar de Campos</a></li>
             <li class="list-group-item"><a href="letras/pra-onde-eu-irei.html" class="text-decoration-none">Pra onde eu irei - Morada</a></li>
